# La_Grille

./: .gitignore  CMakeLists.txt  Grille.cpp  Grille.h  README.md  main.cpp
instances/: competition_02.txt  competition_03.txt  competition_04.txt  competition_05.txt  competition_06.txt  competition_07.txt  competition_08.txt  competition_09.txt  competition_10.txt  competition_11.txt  competition_12.txt  competition_13.txt  competition_14.txt  probleme_100_a.txt  probleme_100_b.txt  probleme_10_a.txt  probleme_10_b.txt  probleme_10_c.txt  probleme_12_a.txt  probleme_12_b.txt  probleme_16_a.txt  probleme_16_b.txt  probleme_20_a.txt  probleme_40_a.txt  probleme_40_b.txt  probleme_4_a.txt  probleme_4_b.txt  probleme_4_c.txt  probleme_64_a.txt  probleme_6_a.txt  probleme_6_b.txt  probleme_6_c.txt  probleme_8_a.txt  probleme_8_b.txt  probleme_8_c.txt  probleme_8_d.txt
resultat/: competition_01_solution.txt  competition_02_solution.txt  competition_03_solution.txt  competition_04_solution.txt  competition_05_solution.txt  competition_06_solution.txt  competition_07_solution.txt  competition_08_solution.txt  probleme_4_c_solution.txt
